# clion-cmake-stm32-freertos

./: CMakeLists.txt  README.md  STM32L1xx.cmake
